[14] Added yearly report

--- a/src/main/resources/templates/expenses/expenses.html
+++ b/src/main/resources/templates/expenses/expenses.html
@@ -32,7 +32,7 @@
 <!--        TODO: Реализовать функционал-->
 <!--        <a href="/expenses/fund/update" role="button" class="btn btn-primary">Пополнить копилку</a>-->
 <!--        <a href="/expenses/currency/update" role="button" class="btn btn-primary">Изменить курс валют</a>-->
-<!--        <a href="/expenses/reports" role="button" class="btn btn-primary">Отчеты</a>-->
+        <a href="/expenses/reports" role="button" class="btn btn-primary">Отчеты</a>
     </div>
     <p></p>
     <h3>Расходы за текущий месяц</h3>
