--- a/src/main/resources/templates/expenses/reports/reports_main.html
+++ b/src/main/resources/templates/expenses/reports/reports_main.html
@@ -59,25 +59,25 @@
 <!--            </form>-->
 <!--        </li>-->
 
-<!--        <li class="list-group-item">-->
-<!--            <h4>Поиск по описанию за период:</h4>-->
-<!--            <form action="/expenses/reports/description">-->
-<!--                <div class="form-group" >-->
-<!--                    <div class="row">-->
-<!--                        <div class="input-group">-->
-<!--                            <span class="input-group-addon">Описание</span>-->
-<!--                            <input type="text" class="form-control" name = "description" id="description" required="true"/>-->
-<!--                            <span class="input-group-addon">Дата начала</span>-->
-<!--                            <input type="date" class="form-control" name = "start" id="start" required="true"/>-->
-<!--                            <span class="input-group-addon">Дата окончания</span>-->
-<!--                            <input type="date" class="form-control" name = "end" id="end" required="true"/>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <p></p>-->
-<!--                    <input type="submit" class="btn btn-info" value="Получить отчет"/>-->
-<!--                </div>-->
-<!--            </form>-->
-<!--        </li>-->
+        <li class="list-group-item">
+            <h4>Поиск по описанию за период:</h4>
+            <form action="/expenses/reports/description">
+                <div class="form-group" >
+                    <div class="row">
+                        <div class="input-group">
+                            <span class="input-group-addon">Описание</span>
+                            <input type="text" class="form-control" name = "description" id="description" required="true"/>
+                            <span class="input-group-addon">Дата начала</span>
+                            <input type="date" class="form-control" name = "start" id="start" required="true"/>
+                            <span class="input-group-addon">Дата окончания</span>
+                            <input type="date" class="form-control" name = "end" id="end" required="true"/>
+                        </div>
+                    </div>
+                    <p></p>
+                    <input type="submit" class="btn btn-info" value="Получить отчет"/>
+                </div>
+            </form>
+        </li>
     </ul>
 
 
