[15] Added expenses report by type

--- a/src/main/resources/templates/expenses/reports/reports_description.html
+++ b/src/main/resources/templates/expenses/reports/reports_description.html
@@ -25,7 +25,7 @@
 </nav>
 
 <div class="container">
-    <h3> <p th:text="'Отчет по описанию за период ' + ${start} + ' - ' + ${end}"/></h3>
+    <h3> <p th:text="'Отчет ' + ${description} + ' за период ' + ${start} + ' - ' + ${end}"/></h3>
 
     <table class="table table-bordered" width="100">
         <thead>
