--- a/src/main/resources/templates/expenses/reports/reports_main.html
+++ b/src/main/resources/templates/expenses/reports/reports_main.html
@@ -40,47 +40,36 @@
                 </div>
             </form>
         </li>
-
-<!--        <li class="list-group-item">-->
-<!--            <h4>Отчет за месяц:</h4>-->
-<!--            <form action="/expenses/reports/month">-->
-<!--                <div class="form-group" >-->
-<!--                    <div class="row">-->
-<!--                        <div class="input-group">-->
-<!--                            <span class="input-group-addon">Месяц</span>-->
-<!--                            <input type="text" class="form-control" name = "month" id="month" required="true" pattern="^[1-9]{1}|([1]{1}[0-2]{1})$"/>-->
-<!--                            <span class="input-group-addon">Год</span>-->
-<!--                            <input type="text" class="form-control" name = "year" id="year" required="true" pattern="^[2]{1}[0]{1}[0-9]{2}$"/>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <p></p>-->
-<!--                    <input type="submit" class="btn btn-info" value="Получить отчет"/>-->
-<!--                </div>-->
-<!--            </form>-->
-<!--        </li>-->
-
         <li class="list-group-item">
             <h4>Поиск по описанию за период:</h4>
             <form action="/expenses/reports/description">
-                <div class="form-group" >
-                    <div class="row">
-                        <div class="input-group">
-                            <span class="input-group-addon">Описание</span>
-                            <input type="text" class="form-control" name = "description" id="description" required="true"/>
-                            <span class="input-group-addon">Дата начала</span>
-                            <input type="date" class="form-control" name = "start" id="start" required="true"/>
-                            <span class="input-group-addon">Дата окончания</span>
-                            <input type="date" class="form-control" name = "end" id="end" required="true"/>
-                        </div>
-                    </div>
-                    <p></p>
-                    <input type="submit" class="btn btn-info" value="Получить отчет"/>
+                <div class="input-group">
+                    <span class="input-group-addon">Описание</span>
+                    <input type="text" class="form-control" name = "description" id="description" required="true"/>
+                    <span class="input-group-addon">Дата начала</span>
+                    <input type="date" class="form-control" name = "start" id="start" required="true"/>
+                    <span class="input-group-addon">Дата окончания</span>
+                    <input type="date" class="form-control" name = "end" id="end" required="true"/>
                 </div>
+                <input type="submit" class="btn btn-info" value="Получить отчет"/>
+            </form>
+        </li>
+        <li class="list-group-item">
+            <h4>Поиск по типу за период:</h4>
+            <form action="/expenses/reports/type">
+                <label class="radio-inline" th:each="type : ${types}" id="types">
+                    <input type="radio" name="type" th:value="${type.id}" required="true"><p th:text="${type.description}"></p></input>
+                </label>
+                <div class="input-group">
+                    <span class="input-group-addon">Дата начала</span>
+                    <input type="date" class="form-control" name = "start" id="start" required="true"/>
+                    <span class="input-group-addon">Дата окончания</span>
+                    <input type="date" class="form-control" name = "end" id="end" required="true"/>
+                </div>
+                <input type="submit" class="btn btn-info" value="Получить отчет"/>
             </form>
         </li>
     </ul>
-
-
 </div>
 </body>
 </html>
