[20] Implement fund in web

--- a/src/main/resources/templates/expenses/expenses_add.html
+++ b/src/main/resources/templates/expenses/expenses_add.html
@@ -20,6 +20,7 @@
             <li class="active"><a href="/expenses/">Expenses</a></li>
             <li><a href="/vehicle/">Vehicles</a></li>
             <li><a href="/communication/">Communications</a></li>
+            <li><a href="/fund/">Funds</a></li>
         </ul>
     </div>
 </nav>
@@ -49,7 +50,7 @@
 
             <label for="amount">Сумма:</label>
             <input type="text" class="form-control" name ="amount" id="amount" required="true"
-                   pattern="^[=]?((\d+[.]\d{1,2})|[0-9]+)([+-]+((\d+[.]\d{1,2})|[0-9]+))*$"/>
+                   pattern="^[=]?\-?((\d+[.]\d{1,2})|[0-9]+)([+-]+((\d+[.]\d{1,2})|[0-9]+))*$"/>
 
             <p></p>
             <input type="submit" class="btn btn-info" value="Сохранить"/>
