--- a/src/main/resources/templates/fund/currency_change.html
+++ b/src/main/resources/templates/fund/currency_change.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Коммуникации и обслуживание</title>
+    <title>Изменить валюту</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
 <nav class="navbar navbar-default">
@@ -19,26 +20,36 @@
             <li><a href="/">Home</a></li>
             <li><a href="/expenses/">Expenses</a></li>
             <li><a href="/vehicle/">Vehicles</a></li>
-            <li class="active"><a href="/communication/">Communications</a></li>
-            <li><a href="/fund/">Funds</a></li>
+            <li><a href="/communication/">Communications</a></li>
+            <li class="active"><a href="/fund/">Funds</a></li>
         </ul>
     </div>
 </nav>
 
-<div class="container">
-    <h3>Объекты обслуживания</h3>
 
-    <form action="/property/details">
-        <div class="form-group" >
-            <h5>Выбрать:</h5>
-            <label class="radio-inline" th:each="property : ${properties}" id="properties" >
-                <input type="radio" name="property" th:value="${property.id}" required="true"><p th:text="${property.description}"></p></input>
+<div class="container">
+    <p></p>
+    <h3>Изменить валюту</h3>
+
+    <form action="/currency/change/response">
+        <div class="form-group">
+            <label for="currencyId">Валюта:</label>
+            <label class="radio-inline" th:each="currency : ${currencies}" id="currencyId">
+                <input type="radio" name="currencyId" th:value="${currency.id}" required="true"><p th:text="${currency.description}"></p></input>
             </label>
             <p></p>
-            <input type="submit" class="btn btn-info" value="Выбрать"/>
+            <label for="price">Цена:</label>
+            <input type="text" class="form-control" name ="price" id="price" required="true"
+                   pattern="^((\d+[.]\d{1,2})|[0-9]+)$"/>
+
+            <p></p>
+            <input type="submit" class="btn btn-info" value="Добавить"/>
         </div>
     </form>
+
+
 </div>
 
+
+
 </body>
-</html>
