--- a/src/main/resources/templates/fund/fund_change.html
+++ b/src/main/resources/templates/fund/fund_change.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Обновить копилку</title>
+    <title>Копилка</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
 <nav class="navbar navbar-default">
@@ -17,42 +18,42 @@
         </div>
         <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li class="active"><a href="/expenses/">Expenses</a></li>
+            <li><a href="/expenses/">Expenses</a></li>
             <li><a href="/vehicle/">Vehicles</a></li>
             <li><a href="/communication/">Communications</a></li>
+            <li class="active"><a href="/fund/">Funds</a></li>
         </ul>
     </div>
 </nav>
 
 <div class="container">
     <p></p>
-    <h3>Обновить копилку</h3>
-
-    <p></p>
-
-    <form action="/expenses/fund/response">
+    <h3>Добавить в копилку или взять от туда.</h3>
+    <form action="/fund/change/response">
         <div class="form-group" >
-            <label for="currency">Валюта:</label>
-            <select   class="form-control" id="currency" name="currency" >
-                <option th:each="currency : ${currencies}" th:value="${currency.key}"><p th:text="${currency.value}"></p></option>
-            </select>
+            <label for="currencyId">Валюта:</label>
+            <label class="radio-inline" th:each="currency : ${currencies}" id="currencyId">
+                <input type="radio" name="currencyId" th:value="${currency.id}" required="true"><p th:text="${currency.description}"></p></input>
+            </label>
+            <p></p>
+            <label for="description">Описание:</label>
+            <input type="text" class="form-control" name = "description" id="description"/>
 
             <label for="amount">Сумма:</label>
             <input type="text" class="form-control" name ="amount" id="amount" required="true"
-                   pattern="^[=]?((\d+[.]\d{1,2})|[0-9]+)([+-]+((\d+[.]\d{1,2})|[0-9]+))*$"/>
+                   pattern="^\-?((\d+[.]\d{1,2})|[0-9]+)$"/>
 
-            <label for="price">Цена валюты:</label>
+            <label for="price">Цена:</label>
             <input type="text" class="form-control" name ="price" id="price" required="true"
-                   pattern="^(\d+[.]\d{1,2}){1}$"/>
+                   pattern="^\-?((\d+[.]\d{1,2})|[0-9]+)$"/>
+
+            <label for="date">Дата:</label>
+            <input type="date" class="form-control" name = "date" id="date"/>
 
             <p></p>
-            <label for="description">Описание:</label>
-            <input type="text" class="form-control" name ="description" id="description" required="true"/>
-
-            <p></p>
-            <input type="submit" class="btn btn-info" value="Обновить"/>
+            <input type="submit" class="btn btn-info" value="Добавить"/>
         </div>
     </form>
 </div>
+
 </body>
-</html>
