--- a/src/main/resources/templates/vehicle/vehicle_details.html
+++ b/src/main/resources/templates/vehicle/vehicle_details.html
@@ -20,6 +20,7 @@
             <li><a href="/expenses/">Expenses</a></li>
             <li class="active"><a href="/vehicle/">Vehicles</a></li>
             <li><a href="/communication/">Communications</a></li>
+            <li><a href="/fund/">Funds</a></li>
         </ul>
     </div>
 </nav>
